# python-garminconnect-bloodpressure

./: LICENSE.txt  README.md  pyproject.toml
src/python_garminconnect_bloodpressure/: __about__.py  __init__.py
