[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-garminconnect-bloodpressure"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ronnie Llamado", email = "ronnie.llamado@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/ronnie-llamado/python-garminconnect-bloodpressure#readme"
Issues = "https://github.com/ronnie-llamado/python-garminconnect-bloodpressure/issues"
Source = "https://github.com/ronnie-llamado/python-garminconnect-bloodpressure"

[tool.hatch.version]
path = "src/python_garminconnect_bloodpressure/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_garminconnect_bloodpressure tests}"

[tool.coverage.run]
source_pkgs = ["python_garminconnect_bloodpressure", "tests"]
branch = true
parallel = true
omit = [
  "src/python_garminconnect_bloodpressure/__about__.py",
]

[tool.coverage.paths]
python_garminconnect_bloodpressure = ["src/python_garminconnect_bloodpressure", "*/python-garminconnect-bloodpressure/src/python_garminconnect_bloodpressure"]
tests = ["tests", "*/python-garminconnect-bloodpressure/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
